src/tess/tl/test/fail/test_fail_discard_option.tl
#module main

make_option() -> Option[Int] {
    Some(1)
}

main() {
    make_option()  // discarded Option — must fail
    0
}
